Finish login and logout

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -54,6 +54,14 @@ p {
   background-color: $navbar-color;
 }
 
+
+#logout {
+    cursor:default;
+    &:hover {
+    background-color: transparent;
+    }
+}
+
 #logo {
   float: left;
   margin-right: 10px;
