--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8406,6 +8406,14 @@ p {
   background-color: #3c3e42;
 }
 
+#logout {
+  cursor: default;
+}
+
+#logout:hover {
+  background-color: transparent;
+}
+
 #logo {
   float: left;
   margin-right: 10px;
@@ -8503,5 +8511,23 @@ section.user_info h1 {
   margin-right: 10px;
   max-width: 50px;
   border-radius: 50%;
+}
+
+/* forms */
+
+input,
+textarea,
+select,
+.uneditable-input {
+  border: 1px solid #bbb;
+  margin-bottom: 15px;
+}
+
+input {
+  height: auto !important;
+}
+
+.panel {
+  margin-top: 50px;
 }
 
